attempting to fix scrolling issue on safari

--- a/client/src/styles/driver.css
+++ b/client/src/styles/driver.css
@@ -15,6 +15,7 @@
 .rightSide {
     position: relative;
     grid-column-start: 2;
+    height: 100vh;
 }
 
 .scrollable::-webkit-scrollbar {
